crates/lang/macro/tests/ui/fail/H-01-invalid-dyn-alloc.stderr
error: expected a bool literal for `dynamic_storage_allocator` ink! config argument
 --> $DIR/H-01-invalid-dyn-alloc.rs:3:17
  |
3 | #[ink::contract(dynamic_storage_allocator = "foo")]
  |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
